# Blast

./: README.md  charge_calculator.py  main.py  pyproject.toml  ug_design.py
datas/: grille_points.csv  left_right_firing.csv  ug_blast.csv  v_shape.csv  wavefront.csv
locales/: en.json  fr.json
src/: about.py  analyze.py  blast_gif.py  blast_math.py  blast_report.py  charge_calculator.py  config.py  doc.py  grid_design.py  home.py  ug_design.py  view_edit.py
src/old/: analyze_1.py  charge_calculator_1.py  grid_design_1.py  home_1.py  view_edit_1.py
