[project]
name = "blast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "pykrige>=1.7.2",
    "reportlab>=4.4.2",
    "scipy>=1.16.0",
    "streamlit>=1.46.1",
]
